# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.lcov  pyproject.toml
.github/workflows/: gendiff.yml
gendiff/: __init__.py  format.py  gendiff.py  parse.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: main.py
tests/: test_gendiff.py
tests/fixtures/: expected.txt  expectedyml.txt  file1rec.json  file2rec.json
